xidlc/tests/snapshots/codegen_snapshot__python-http__http_hir_shared_semantics.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_hir_shared_semantics_http.py
===============
# Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

from __future__ import annotations

import abc
from dataclasses import dataclass
from typing import Optional

from xidl.http import (
Request,
Route,
RouteMetadata,
SecurityRequirement,
ServerStreamResponse,
StreamMetadata,
cookie_value,
encode_json_response,
encode_plain_response,
encode_stream_response,
header_value,
path_value,
query_value,
read_form_body,
read_json_body,
read_json_field,
read_plain_body,
read_scalar,
require_accept,
require_content_type,
require_security,
)

# generated http module: http_hir_shared_semantics

@dataclass
class ReportApiGetReportRequest:
    id: str
    lang: Optional[str]
    trace_id: str

@dataclass
class ReportApiGetReportResponse:
    value: str

@dataclass
class ReportApiWatchReportRequest:
    id: str

class ReportApiService(abc.ABC):
    @abc.abstractmethod
    async def get_report(self, request: ReportApiGetReportRequest) -> ReportApiGetReportResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def watch_report(self, request: ReportApiWatchReportRequest) -> ServerStreamResponse:
        raise NotImplementedError

async def _report_api_get_report_endpoint(service: ReportApiService, request: Request):
    require_accept(request, "text/plain")
    _security = require_security(request, [SecurityRequirement(kind="bearer"), ])
    request_value = ReportApiGetReportRequest(
        id=read_scalar(path_value(request, "id"), "str", optional=False, default_on_missing=False, wire_name="id"),
        lang=read_scalar(query_value(request, "lang"), "str", optional=True, default_on_missing=False, wire_name="lang"),
        trace_id=read_scalar(header_value(request, "X-Trace-Id"), "str", optional=False, default_on_missing=False, wire_name="X-Trace-Id"),
    )
    response_value = await service.get_report(request_value)
    response_payload = getattr(response_value, 'value', getattr(response_value, 'return_', response_value))
    return encode_plain_response(response_payload)

def _report_api_get_report_route(service: ReportApiService) -> Route:
    async def endpoint(request: Request):
        return await _report_api_get_report_endpoint(service, request)
    return Route(
        method="GET",
        paths=["/reports/{id}"],
        endpoint=endpoint,
        handler=service.get_report,
        request_model=ReportApiGetReportRequest,
        response_model=ReportApiGetReportResponse,
        metadata=RouteMetadata(request_content_type="", response_content_type="text/plain", security=[SecurityRequirement(kind="bearer"), ], stream=None),
    )

async def _report_api_watch_report_endpoint(service: ReportApiService, request: Request):
    require_accept(request, "text/event-stream")
    _security = require_security(request, [SecurityRequirement(kind="bearer"), ])
    request_value = ReportApiWatchReportRequest(
        id=read_scalar(path_value(request, "id"), "str", optional=False, default_on_missing=False, wire_name="id"),
    )
    response_value = await service.watch_report(request_value)
    response_payload = getattr(response_value, 'value', getattr(response_value, 'return_', response_value))
    return encode_stream_response(response_payload, codec="sse")

def _report_api_watch_report_route(service: ReportApiService) -> Route:
    async def endpoint(request: Request):
        return await _report_api_watch_report_endpoint(service, request)
    return Route(
        method="GET",
        paths=["/reports/{id}/events"],
        endpoint=endpoint,
        handler=service.watch_report,
        request_model=ReportApiWatchReportRequest,
        response_model=ServerStreamResponse,
        metadata=RouteMetadata(request_content_type="", response_content_type="text/event-stream", security=[SecurityRequirement(kind="bearer"), ], stream=StreamMetadata(kind="server", codec="sse")),
    )

def report_api_routes(service: ReportApiService) -> list[Route]:
    return [
        _report_api_get_report_route(service),
        _report_api_watch_report_route(service),
    ]
