xidlc/tests/snapshots/codegen_snapshot__python-http__http_response_shape.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_response_shape.py
===============
from __future__ import annotations

import abc
import enum
from dataclasses import dataclass, field
from typing import Any, Optional

# generated module: http_response_shape

===============
http_response_shape_http.py
===============
from __future__ import annotations

import abc
from dataclasses import dataclass
from typing import Optional

from xidl.http import (
Request,
Route,
RouteMetadata,
SecurityRequirement,
ServerStreamResponse,
StreamMetadata,
cookie_value,
encode_json_response,
encode_stream_response,
header_value,
path_value,
query_value,
read_json_body,
read_json_field,
read_scalar,
require_accept,
require_content_type,
require_security,
)

# generated http module: http_response_shape

@dataclass
class HttpResponseShapeServiceHelloRequest:
    pass

@dataclass
class HttpResponseShapeServiceHelloResponse:
    value: str

@dataclass
class HttpResponseShapeServiceGetCountRequest:
    pass

@dataclass
class HttpResponseShapeServiceGetCountResponse:
    count: int

@dataclass
class HttpResponseShapeServiceAddRequest:
    a: int
    b: int

@dataclass
class HttpResponseShapeServiceAddResponse:
    return_: int
    sum: int

@dataclass
class HttpResponseShapeServiceBumpRequest:
    value: int

@dataclass
class HttpResponseShapeServiceBumpResponse:
    return_: int
    value: int

@dataclass
class HttpResponseShapeServicePingRequest:
    pass

@dataclass
class HttpResponseShapeServicePingResponse:
    pass

class HttpResponseShapeServiceService(abc.ABC):
    @abc.abstractmethod
    async def hello(self, request: HttpResponseShapeServiceHelloRequest) -> HttpResponseShapeServiceHelloResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def get_count(self, request: HttpResponseShapeServiceGetCountRequest) -> HttpResponseShapeServiceGetCountResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def add(self, request: HttpResponseShapeServiceAddRequest) -> HttpResponseShapeServiceAddResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def bump(self, request: HttpResponseShapeServiceBumpRequest) -> HttpResponseShapeServiceBumpResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def ping(self, request: HttpResponseShapeServicePingRequest) -> HttpResponseShapeServicePingResponse:
        raise NotImplementedError

async def _http_response_shape_service_hello_endpoint(service: HttpResponseShapeServiceService, request: Request):
    require_accept(request, "application/json")
    request_value = HttpResponseShapeServiceHelloRequest()
    response_value = await service.hello(request_value)
    return encode_json_response(response_value)

def _http_response_shape_service_hello_route(service: HttpResponseShapeServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_response_shape_service_hello_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/hello"],
        endpoint=endpoint,
        handler=service.hello,
        request_model=HttpResponseShapeServiceHelloRequest,
        response_model=HttpResponseShapeServiceHelloResponse,
        metadata=RouteMetadata(request_content_type="application/json", response_content_type="application/json", security=[], stream=None),
    )

async def _http_response_shape_service_get_count_endpoint(service: HttpResponseShapeServiceService, request: Request):
    require_accept(request, "application/json")
    request_value = HttpResponseShapeServiceGetCountRequest()
    response_value = await service.get_count(request_value)
    return encode_json_response(response_value)

def _http_response_shape_service_get_count_route(service: HttpResponseShapeServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_response_shape_service_get_count_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/get_count"],
        endpoint=endpoint,
        handler=service.get_count,
        request_model=HttpResponseShapeServiceGetCountRequest,
        response_model=HttpResponseShapeServiceGetCountResponse,
        metadata=RouteMetadata(request_content_type="application/json", response_content_type="application/json", security=[], stream=None),
    )

async def _http_response_shape_service_add_endpoint(service: HttpResponseShapeServiceService, request: Request):
    require_accept(request, "application/json")
    require_content_type(request, "application/json")
    body = read_json_body(request)
    request_value = HttpResponseShapeServiceAddRequest(
        a=read_json_field(body, "a", "int", optional=False),
        b=read_json_field(body, "b", "int", optional=False),
    )
    response_value = await service.add(request_value)
    return encode_json_response(response_value)

def _http_response_shape_service_add_route(service: HttpResponseShapeServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_response_shape_service_add_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/add"],
        endpoint=endpoint,
        handler=service.add,
        request_model=HttpResponseShapeServiceAddRequest,
        response_model=HttpResponseShapeServiceAddResponse,
        metadata=RouteMetadata(request_content_type="application/json", response_content_type="application/json", security=[], stream=None),
    )

async def _http_response_shape_service_bump_endpoint(service: HttpResponseShapeServiceService, request: Request):
    require_accept(request, "application/json")
    require_content_type(request, "application/json")
    body = read_json_body(request)
    request_value = HttpResponseShapeServiceBumpRequest(
        value=read_json_field(body, "value", "int", optional=False),
    )
    response_value = await service.bump(request_value)
    return encode_json_response(response_value)

def _http_response_shape_service_bump_route(service: HttpResponseShapeServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_response_shape_service_bump_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/bump"],
        endpoint=endpoint,
        handler=service.bump,
        request_model=HttpResponseShapeServiceBumpRequest,
        response_model=HttpResponseShapeServiceBumpResponse,
        metadata=RouteMetadata(request_content_type="application/json", response_content_type="application/json", security=[], stream=None),
    )

async def _http_response_shape_service_ping_endpoint(service: HttpResponseShapeServiceService, request: Request):
    require_accept(request, "application/json")
    request_value = HttpResponseShapeServicePingRequest()
    response_value = await service.ping(request_value)
    return encode_json_response(response_value)

def _http_response_shape_service_ping_route(service: HttpResponseShapeServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_response_shape_service_ping_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/ping"],
        endpoint=endpoint,
        handler=service.ping,
        request_model=HttpResponseShapeServicePingRequest,
        response_model=HttpResponseShapeServicePingResponse,
        metadata=RouteMetadata(request_content_type="application/json", response_content_type="application/json", security=[], stream=None),
    )

def http_response_shape_service_routes(service: HttpResponseShapeServiceService) -> list[Route]:
    return [
        _http_response_shape_service_hello_route(service),
        _http_response_shape_service_get_count_route(service),
        _http_response_shape_service_add_route(service),
        _http_response_shape_service_bump_route(service),
        _http_response_shape_service_ping_route(service),
    ]
