xidlc/tests/snapshots/codegen_snapshot__python-http__http_security.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_security.py
===============
# Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

from __future__ import annotations

import abc
import enum
from dataclasses import dataclass, field
from typing import Any, Optional

# generated module: http_security

===============
http_security_http.py
===============
# Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

from __future__ import annotations

import abc
from dataclasses import dataclass
from typing import Optional

from xidl.http import (
Request,
Route,
RouteMetadata,
SecurityRequirement,
ServerStreamResponse,
StreamMetadata,
cookie_value,
encode_json_response,
encode_plain_response,
encode_stream_response,
header_value,
path_value,
query_value,
read_form_body,
read_json_body,
read_json_field,
read_plain_body,
read_scalar,
require_accept,
require_content_type,
require_security,
)

# generated http module: http_security

@dataclass
class HttpSecurityServiceGetUserRequest:
    id: int
    locale: Optional[str]
    trace_id: str

@dataclass
class HttpSecurityServiceGetUserResponse:
    value: str

@dataclass
class HttpSecurityServiceSearchUserRequest:
    keyword: str
    page: Optional[int]

@dataclass
class HttpSecurityServiceSearchUserResponse:
    value: str

@dataclass
class HttpSecurityServiceHealthRequest:
    pass

@dataclass
class HttpSecurityServiceHealthResponse:
    value: str

class HttpSecurityServiceService(abc.ABC):
    @abc.abstractmethod
    async def get_user(self, request: HttpSecurityServiceGetUserRequest) -> HttpSecurityServiceGetUserResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def search_user(self, request: HttpSecurityServiceSearchUserRequest) -> HttpSecurityServiceSearchUserResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def health(self, request: HttpSecurityServiceHealthRequest) -> HttpSecurityServiceHealthResponse:
        raise NotImplementedError

async def _http_security_service_get_user_endpoint(service: HttpSecurityServiceService, request: Request):
    _security = require_security(request, [SecurityRequirement(kind="basic", realm=None), SecurityRequirement(kind="api_key", location="header", name="X-API-Key"), ])
    request_value = HttpSecurityServiceGetUserRequest(
        id=read_scalar(path_value(request, "id"), "int", optional=False, default_on_missing=False, wire_name="id"),
        locale=read_scalar(query_value(request, "locale"), "str", optional=True, default_on_missing=False, wire_name="locale"),
        trace_id=read_scalar(header_value(request, "X-Trace-Id"), "str", optional=False, default_on_missing=False, wire_name="X-Trace-Id"),
    )
    response_value = await service.get_user(request_value)
    response_payload = getattr(response_value, 'value', getattr(response_value, 'return_', response_value))
    return encode_plain_response(response_payload)

def _http_security_service_get_user_route(service: HttpSecurityServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_security_service_get_user_endpoint(service, request)
    return Route(
        method="GET",
        paths=["/users/{id}"],
        endpoint=endpoint,
        handler=service.get_user,
        request_model=HttpSecurityServiceGetUserRequest,
        response_model=HttpSecurityServiceGetUserResponse,
        metadata=RouteMetadata(request_content_type="", response_content_type="text/plain", security=[SecurityRequirement(kind="basic", realm=None), SecurityRequirement(kind="api_key", location="header", name="X-API-Key"), ], stream=None),
    )

async def _http_security_service_search_user_endpoint(service: HttpSecurityServiceService, request: Request):
    require_content_type(request, "application/json")
    _security = require_security(request, [SecurityRequirement(kind="oauth2", scopes=["write:users", "read:users"]), ])
    body = read_json_body(request)
    request_value = HttpSecurityServiceSearchUserRequest(
        keyword=read_json_field(body, "keyword", "str", optional=False),
        page=read_json_field(body, "page", "int", optional=True),
    )
    response_value = await service.search_user(request_value)
    response_payload = getattr(response_value, 'value', getattr(response_value, 'return_', response_value))
    return encode_plain_response(response_payload)

def _http_security_service_search_user_route(service: HttpSecurityServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_security_service_search_user_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/users/search"],
        endpoint=endpoint,
        handler=service.search_user,
        request_model=HttpSecurityServiceSearchUserRequest,
        response_model=HttpSecurityServiceSearchUserResponse,
        metadata=RouteMetadata(request_content_type="application/json", response_content_type="text/plain", security=[SecurityRequirement(kind="oauth2", scopes=["write:users", "read:users"]), ], stream=None),
    )

async def _http_security_service_health_endpoint(service: HttpSecurityServiceService, request: Request):
    request_value = HttpSecurityServiceHealthRequest()
    response_value = await service.health(request_value)
    response_payload = getattr(response_value, 'value', getattr(response_value, 'return_', response_value))
    return encode_plain_response(response_payload)

def _http_security_service_health_route(service: HttpSecurityServiceService) -> Route:
    async def endpoint(request: Request):
        return await _http_security_service_health_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/health"],
        endpoint=endpoint,
        handler=service.health,
        request_model=HttpSecurityServiceHealthRequest,
        response_model=HttpSecurityServiceHealthResponse,
        metadata=RouteMetadata(request_content_type="", response_content_type="text/plain", security=[], stream=None),
    )

def http_security_service_routes(service: HttpSecurityServiceService) -> list[Route]:
    return [
        _http_security_service_get_user_route(service),
        _http_security_service_search_user_route(service),
        _http_security_service_health_route(service),
    ]
