xidlc/tests/snapshots/codegen_snapshot__python-http__http_stream.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_stream_http.py
===============
# Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

from __future__ import annotations

import abc
from dataclasses import dataclass
from typing import Optional

from xidl.http import (
Request,
Route,
RouteMetadata,
SecurityRequirement,
ServerStreamResponse,
StreamMetadata,
cookie_value,
encode_json_response,
encode_plain_response,
encode_stream_response,
header_value,
path_value,
query_value,
read_form_body,
read_json_body,
read_json_field,
read_plain_body,
read_scalar,
require_accept,
require_content_type,
require_security,
)

# generated http module: http_stream

@dataclass
class HttpStreamApiAlertsRequest:
    district: str

@dataclass
class HttpStreamApiUploadAssetRequest:
    asset_id: str
    chunk: list[int]

@dataclass
class HttpStreamApiUploadAssetResponse:
    value: str

class HttpStreamApiService(abc.ABC):
    @abc.abstractmethod
    async def alerts(self, request: HttpStreamApiAlertsRequest) -> ServerStreamResponse:
        raise NotImplementedError

    @abc.abstractmethod
    async def upload_asset(self, request: HttpStreamApiUploadAssetRequest) -> HttpStreamApiUploadAssetResponse:
        raise NotImplementedError

async def _http_stream_api_alerts_endpoint(service: HttpStreamApiService, request: Request):
    _security = require_security(request, [SecurityRequirement(kind="basic", realm=None), ])
    request_value = HttpStreamApiAlertsRequest(
        district=read_scalar(path_value(request, "district"), "str", optional=False, default_on_missing=False, wire_name="district"),
    )
    response_value = await service.alerts(request_value)
    response_payload = getattr(response_value, 'value', getattr(response_value, 'return_', response_value))
    return encode_stream_response(response_payload, codec="sse")

def _http_stream_api_alerts_route(service: HttpStreamApiService) -> Route:
    async def endpoint(request: Request):
        return await _http_stream_api_alerts_endpoint(service, request)
    return Route(
        method="GET",
        paths=["/alerts/{district}"],
        endpoint=endpoint,
        handler=service.alerts,
        request_model=HttpStreamApiAlertsRequest,
        response_model=ServerStreamResponse,
        metadata=RouteMetadata(request_content_type="", response_content_type="text/event-stream", security=[SecurityRequirement(kind="basic", realm=None), ], stream=StreamMetadata(kind="server", codec="sse")),
    )

async def _http_stream_api_upload_asset_endpoint(service: HttpStreamApiService, request: Request):
    require_content_type(request, "application/x-ndjson")
    _security = require_security(request, [SecurityRequirement(kind="bearer"), ])
    body = read_json_body(request)
    request_value = HttpStreamApiUploadAssetRequest(
        asset_id=read_json_field(body, "asset_id", "str", optional=False),
        chunk=read_json_field(body, "chunk", "list[int]", optional=False),
    )
    response_value = await service.upload_asset(request_value)
    response_payload = getattr(response_value, 'value', getattr(response_value, 'return_', response_value))
    return encode_plain_response(response_payload)

def _http_stream_api_upload_asset_route(service: HttpStreamApiService) -> Route:
    async def endpoint(request: Request):
        return await _http_stream_api_upload_asset_endpoint(service, request)
    return Route(
        method="POST",
        paths=["/upload"],
        endpoint=endpoint,
        handler=service.upload_asset,
        request_model=HttpStreamApiUploadAssetRequest,
        response_model=HttpStreamApiUploadAssetResponse,
        metadata=RouteMetadata(request_content_type="application/x-ndjson", response_content_type="text/plain", security=[SecurityRequirement(kind="bearer"), ], stream=StreamMetadata(kind="client", codec="ndjson")),
    )

def http_stream_api_routes(service: HttpStreamApiService) -> list[Route]:
    return [
        _http_stream_api_alerts_route(service),
        _http_stream_api_upload_asset_route(service),
    ]
